--- a/learningReact.html
+++ b/learningReact.html
@@ -45,7 +45,7 @@
 
       // Melakukan penampilan data dengan perulangan
       function HomePage() {
-        const students = ["Panjul", "Amaik", "Colak"];
+        const students = ["Panjual", "Amaik", "Colak"];
 
         // button Like
         const [likes, setLikes] = React.useState(0);
